# hospital-utilization-forecasting-ml

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reports/: error_breakdown.md  error_breakdown_by_province.csv  error_breakdown_by_size.csv  feature_importance.csv  feature_importance.md  residual_diagnostics.md  summary.md
scripts/: create_issues.sh  generate_interpretation_reports.py
src/: __init__.py  backtest.py  config.py  evaluate.py  experiments.py  features.py  hierarchical.py  ingestion.py  logging_config.py  train.py  utils.py  validation.py
tests/: __init__.py  test_backtest.py  test_config.py  test_features.py  test_hierarchical.py  test_ingestion.py  test_logging_config.py  test_train.py  test_utils.py  test_validation.py
